# h3c-monitor

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEMO.md  FEATURES.md  README.md  alarm.py  app.py  collector.py  config.py  database.py  h3c_monitor.db  pyproject.toml
driver/: __init__.py  base.py  h3c_netconf.py  h3c_snmp.py  h3c_ssh.py
static/css/: app.css
static/js/: acl.js  alarms.js  api.js  config.js  dashboard.js  devices.js  interfaces.js  ipam.js  routes.js  template.js  vlan.js
templates/: acl.html  alarms.html  audit.html  base.html  bigscreen.html  config.html  dashboard.html  devices.html  index.html  interfaces.html  ipam.html  reports.html  routes.html  template.html  vlan_registry.html
tests/: conftest.py  test_acl_parsing.py  test_alarm_engine.py  test_database.py
